Revisoes imagens e texto

--- a/src/donations.html
+++ b/src/donations.html
@@ -62,36 +62,35 @@
 					<div class="row" id="section-1">
 						<div class="col-md-6">
 							<p>
-								Para realizar nosso trabalho de castrar os animais de rua aceitamos tampas plásticas
-								e lacres de alumínio. Outros materiais não são aproveitados pelo nosso projeto, sendo descartados.
-								Pedimos que separem o material a ser doado a Ecopatas, evite o envio de materiais como agulhas, seringas
-								e outros materiais que possam causar prejuízos a saúde dos nossos voluntários.
+								Para realizar o trabalho de castração dos animais de rua, arrecadamos e vendemos tampinhas plásticas e lacres de alumínio. Outros materiais não são aproveitados pelo nosso projeto. Sendo assim, ao separarem o material reciclável, enviem à Ecopatas apenas as tampas plásticas e os lacres de alumínio. 
+							</p>
+							<p>
+								Infelizmente, recebemos com frequência agulhas, seringas, vidros, que podem causar acidentes e prejuízo à nossa saúde e a dos nossos voluntários. Blisters de remédios, cápsulas de café, tampas de metal, pilhas, rolhas também <b>não são aproveitados pela ONG</b> e atrasam muito a nossa triagem, diminuindo assim a nossa produção. 
 							</p>
 						</div>
 						<div class="col-md-6">
-							<img alt="Bootstrap Image Preview" src=".\assets\imgs\pode-doar.png" class="rounded">
+							<img alt="Bootstrap Image Preview" src=".\assets\imgs\EstasSimEstasNao.jfif" class="rounded">
 						</div>
 					</div>
 					<div class="row" id="section-2">
 						<div class="col-md-6">
 							<h5>Materiais separados por cor</h5>
 							<p>
-								Sempre conseguimos vender por um preço melhor os materiais já separados por cor e tipo.
-								Você também pode entregar a sua doação já separada.
+								A venda das tampinhas plásticas é valorizada se elas já estiverem separadas por cor. Antes de entregar sua doação em um dos pontos de coleta, você consegue fazer esta separação? Se não conseguir, não tem problema! Mas se conseguir, ahh, ajuda tanto!
+							</p>
+							<p>
+								Ah, tampinhas e lacres devem ser enviados separadamente e isso também ajuda muito!
 							</p>
 						</div>
 						<div class="col-md-6">
-							<img alt="Bootstrap Image Preview" src=".\assets\imgs\separacao.png">
+							<img alt="Bootstrap Image Preview" src=".\assets\imgs\SeparacaoPorCor.jpg">
 						</div>
 					</div>
 					<div class="row" id="section-3">
 						<div class="col-md-12">
 							<h5>Doação de materiais de organização e segurança</h5>
 							<p>
-								Caso seja do seu interesse nos ajudar com a segurança dos nossos voluntários que vem
-								a sede da Ecopatas, aceitamos doações de EPI para uma triagem segura e sem riscos biológicos
-								para nossos queridos voluntários. Aceitamos luvas e máscaras descatáveis, tesoura, fitas adesivas,
-								além de sacos de ração vazios (ráfia).
+								Você também pode colaborar a segurança dos nossos voluntários na triagem doando luvas descartáveis ou ainda com objetos que nos ajudam na triagem e organização do material, como, tesouras, fitas adesivas, além de sacos vazios de ração, de ráfia (entulho), etc.
 							</p>
 						</div>
 					</div>
