--- a/src/faq.html
+++ b/src/faq.html
@@ -11,7 +11,7 @@
     <meta name="author" content="LayoutIt!">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/faq.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,87 +58,135 @@
                         </div>
 
                         <div class="col-md-12">
-                            <p>Tem dúvidas sobre como trabalhamos e o que fazemos? Listamos aqui as perguntas mais realizadas nas nossas redes sociais.</p>
+                            <p>Tem dúvidas sobre como trabalhamos e o que fazemos? Listamos aqui as perguntas mais frequentes nas nossas redes sociais.</p>
                         </div>   
                     </div>
                     <div class="row" id="answers">
                         <div class="col-md-12">
                             <h6>Como doar tampas e lacres?</h6>
                             <p>
-                                No nosso site possuímos uma lista com todos os
+                                No nosso site e nas redes sociais temos uma lista com todos os
                                 <a href="points.html">pontos de arrecadação</a>.
-                                Você pode consultar qual fica mais próximo da sua residência
-                                e entregar sua doação diretamente no ponto de arrecadação.
-                                Temos pontos distribuídos em todo o estado de São Paulo.
+                                Você pode consultar qual fica mais próximo e entregar sua doação
+                                diretamente no ponto. Temos pontos distribuídos em diversas regiões
+                                de São Paulo. Você pode também entregar diretamente na nossa sede,
+                                principalmente grandes quantidades. 
                             </p>
 
                             <h6>O que posso doar?</h6>
                             <p>
-                                Recebemos apenas tampinhas plásticas e lacres de alumínio.
-                                Materiais de plástico como tampinhas de garrafa, de produtos de limpeza e até de
-                                canetas, que tenham o tamanho máximo igual a  tampa de um pote de sorvete.
-                                Não recebemos agulhas, pilha, cápsulas de café ou embalagem de remédio (blister).
-                                Para entender melhor, viste a página <a href="donations.html">o que doar </a>.
+                                Tampinhas plásticas e lacres de alumínio. </br>
+                                Não enviem seringas com ou sem agulhas, pilhas, rolhas, tampinhas de garrafa de vidro,
+                                cápsulas de café ou embalagem de remédio (blister).
+                                Para entender melhor, visite a página <a href="donations.html">o que doar</a>.
+                            </p>
+
+                            <h6>Por que vocês não aceitam outros materiais como garrafas Pet, latas de alumínio,
+                                blister de remédio? Por que só as tampas?</h6>
+                            <p id="answer-tres">
+                                Além de não termos o tempo necessário para nos dedicarmos ao projeto, já que as 3
+                                membros-fundadoras tem seus empregos convencionais, não temos espaço para armazenar
+                                tantos tipos diferentes de materiais nos seus diferentes tamanhos e ainda negociar sua
+                                venda com diferentes compradores. Um maior número de voluntários seria necessário para triar
+                                e organizar tantos materiais diferentes, enfim. Precisávamos então, focar em materiais fáceis
+                                de manusear, que ocupam um espaço menor mesmo em enorme quantidade. Além disso, a tampinha
+                                plástica e o lacre são os mais valorizados no mercado e conseguimos cumprir melhor o nosso
+                                propósito com os recursos obtidos com a venda deles. 
+                                Temos um <a href=>vídeo</a> que fala um pouco sobre isso. 
+                            </p>
+
+                            <h6 id="question-quatro">Acabei de ver um animal abandonado/machucado na rua. Vocês podem resgatar?</h6>
+                            <p id="answer-quatro">
+                                A Ecopatas não tem um abrigo para alojar animais, por isso, não temos como resgatar.
                             </p>
 
                             <h6>Quero me voluntariar sendo um ponto de arrecadação, como faço?</h6>
                             <p>
-                                Para ser um ponto de arrecadação, basta entrar em nosso site, na página
-                                de voluntários e se cadastrar. É requisito obrigatório que o responsável se
-                                comprometa a levar o material coletado até a nossa sede, não temos como
-                                retirar. Se isso é possível pra você venha fazer parte dessa mudança.
+                                Para ser um ponto de arrecadação, basta entrar em nosso site, na página de voluntários e se
+                                cadastrar. É um pré-requisito que o responsável se comprometa a levar o material coletado até a
+                                nossa sede. Não conseguimos retirar os materiais nos pontos e estes, por sua vez, não são
+                                autorizados a deixar sua arrecadação em outros pontos. Contamos com essa colaboração.
+                                Venha fazer parte dessa mudança!
                             </p>
 
                             <h6>Como funciona o voluntariado presencial? Qual a forma de participar?</h6>
                             <p>
-                                Todos os sábados nós fazemos a triagem do material coletado, que muitas
-                                vezes vem sujo ou com outros materiais que não podem ser vendidos junto.
-                                Além disso separamos todo esse material por cor para valer mais dinheiro,
-                                o que nos possibilitará uma maior quantidade de animais castrados. Para participar
-                                basta entrar em nosso site e se inscrever na <a href="volunteer.html">página de voluntário</a>, as triagens
-                                ocorrem em nossa sede em SP. Não se esqueça de ler o termo de responsabilidade
-                                e esperamos você em breve.
+                                Todos os sábados nós fazemos a triagem do material coletado, separando por cor e tirando contaminantes.
+                                Para participar basta entrar em nosso site e se inscrever na 
+                                <a href="volunteer.html">página de voluntário</a>.  A triagem acontece
+                                em nossa sede na Zona Leste de São Paulo. Não se esqueça de ler o termo de
+                                responsabilidade. Lembrando que se não puder participar presencialmente e
+                                ainda assim quiser ajudar mais, basta separar suas tampinhas por cor em casa. Isso já nos ajuda muito!
+
                             </p>
 
                             <h6>O que é feito com o material doado?</h6>
                             <p>
-                                Recebemos apenas tampinhas plásticas e lacres de alumínio.
-                                Materiais de plástico como tampinhas de garrafa, de produtos de limpeza e até de
-                                canetas, que tenham o tamanho máximo igual a  tampa de um pote de sorvete.
-                                Não recebemos agulhas, pilha, cápsulas de café ou embalagem de remédio (blister).
-                                Para entender melhor, viste a página <a href="donations.html">o que doar </a>.
+                                Nosso material é vendido diretamente para fabricantes de produtos plásticos,
+                                que trituram todo o plástico recebido, retornando-o à cadeia produtiva e
+                                transformando em outros produtos. Nós utilizamos toda a verba do material
+                                vendido para um único propósito: a castração de animais de rua ou que pertençam a
+                                pessoas em situação de vulnerabilidade social. 
+
                             </p>
 
                             <h6>Eu posso doar dinheiro ou outras coisas?</h6>
                             <p>
-                                Nós utilizamos todo o material coletado para um propósito: a castração de animais de
-                                rua ou de animais que são de pessoas em situação de vulnerabilidade social.
-                                Aquele material que não está na lista de materiais recebidos é descartado e
-                                direcionado para recicladores próximos a sede da Ecopatas.
+                                Atualmente não aceitamos doação em dinheiro. Caso deseje, você pode doar outros materiais
+                                que são utilizados na triagem das tampinhas como:
+                                luvas descartáveis, tesouras, fitas adesivas e sacos de ração ou de ráfia (vazios).
                             </p>
 
                             <h6>Posso divulgar o meu ponto de arrecadação?</h6>
                             <p>
-                                Não só pode como deve. Se você é um comércio e receberá doações do público
-                                geral te enviaremos uma arte para divulgação que poderá ser utlizado nas redes
-                                sociais ou ser impresso e colocado em um local visível. Caso você seja um ponto
-                                de coleta interno (condomínios, por exemplo), você poderá divulgar da forma que achar
-                                melhor.
+                                Não só pode, como deve! Se você é um comércio e irá receber doações do público em geral,
+                                nós enviaremos uma arte para divulgação afixando em algum lugar de fácil visualização no seu
+                                ponto e também pode divulgar esta arte nas suas redes sociais.
+                                Pedimos sempre que toda divulgação contenha o Logo da Ecopatas mantendo a nossa identidade visual. 
+                            </p>
+
+                            <h6>Como vocês selecionam os animais para castração?</h6>
+                            <p>
+                                Nós recebemos dezenas de pedidos diariamente via mensagens, indicações de voluntários, e-mail,
+                                redes sociais. Esses pedidos procedem de protetores independentes, pessoas que fazem trabalhos
+                                sociais dentro das comunidades, mas também de pessoas comuns, simpatizantes da causa que se
+                                deparam com animais abandonados no caminho. Sempre nos certificamos de que este animal está em
+                                situação de rua ou tenha um risco iminente de procriar,
+                                ou seja, solto na rua ou dentro das comunidades e não são castrados
                             </p>
 
                             <h6>Como é feita a castração dos animais?</h6>
                             <p>
-                                A castração é feita através de clínicas parceiras da Ecopatas.
-                                Todas estas clínicas trabalham de maneira profissional e utlizam
-                                uma tabela de preços com tarifas sociais para os nossos animais.
+                                A castração é realizada em clínicas parceiras da Ecopatas por profissionais
+                                experientes, seguindo todas as normas e procedimentos esperados neste tipo de cirurgia. </br>
+                                A Ecopatas então realiza o pagamento às clínicas conforme o número de cirurgias feitas no dia. Todos cadastros e agendamentos são feitos única e exclusivamente pela equipe da Ecopatas. É comum termos grande fila de espera para o procedimento. 
+
                             </p>
 
                             <h6>Como posso acompanhar o trabalho da Ecopatas?</h6>
                             <p>
                                 Para acompanhar o trabalho da Ecopatas, todos os nossos dados sobre material
-                                coletado e castrações feitas, basta nos acompanhar nas redes sociais e no
-                                nossos site. Estamos sempre atualizando tudo com os dados novos e postando fotos
-                                fofinhas dos nossos bichinhos castrados.
+                                coletado e castrações feitas, basta nos acompanhar nas redes sociais e no nosso site.
+                                Estamos sempre atualizando todos os números e postando fotos dos bichinhos castrados.
+                            </p>
+
+                            <h6>Podemos visitar os animais na sede?</h6>
+                            <p>
+                                A Ecopatas não tem abrigo para animais, apenas viabilizamos as castração.
+                                Ajudamos na divulgação e na busca por um lar para esse animais, mas pode acontecer
+                                de o animal ser devolvido ao lugar de onde foi retirado, 
+                                às ruas. Nos esforçamos para que isso não aconteça, mas infelizmente não há um lar para todos.
+                            </p>
+
+                            <h6>Como faço para conseguir uma castração para o meu cachorro ou gato?</h6>
+                            <p>
+                                Se o cãozinho ou gatinho for seu, ou seja, <b>você é o tutor responsável</b>,
+                                você pode cadastrar o animal no portal 156 da prefeitura, que oferece até 10
+                                castrações por CPF. Pode levar de 1 a 3 meses para ser chamado, mas dependendo do bairro,
+                                até menos. Você pode escolher uma clínica próxima da sua casa e o procedimento é gratuito,
+                                ou seja, subsidiado pela prefeitura. Ou ainda… algumas clínicas promovem castrações a preços
+                                populares com frequência. O propósito da Ecopatas é realmente atender àqueles animais
+                                desassistidos sob alto risco de procriarem descontroladamente. 
                             </p>
                             
                         </div>
