--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 								</div>
 								<div class="row">
 									<div class="col-md-12">
-										<p>Desde 2018 viabilizamos castrações em animais de rua através da arrecadação de tampas plásticas e lacres de alumínio em SP</p>
+										<p>Desde 2018 viabilizamos castrações em animais de rua através da arrecadação e venda de tampas plásticas e lacres de alumínio em SP</p>
 									</div>
 								</div>
 								<div class="row">
@@ -77,7 +77,7 @@
 								
 							</div>
 							<div class="col-md-6" id="section-um-img">
-								<img alt="Foto dos voluntários" src="assets\imgs\home1.png">
+								<img alt="Foto dos voluntários" src="assets\imgs\CapaDoSite.png">
 							</div>
 							
 						</div>
@@ -88,7 +88,7 @@
 							</div>
 							<div class="col-md-9">
 								<p class="text-left">
-									A Ecopatas é a ONG pioneira no estado de São Paulo a realizar o trabalho de coleta, triagem e venda de alguns materiais recicláveis com a finalidade de realizar a castração dos animais de rua. 
+									A Ecopatas é uma ONG de conservação do meio ambiente e de amor aos animais abandonados, foi pioneira no estado de São Paulo a realizar esse tipo de trabalho. 
 								</p>
 							</div>
 						</div>
@@ -101,7 +101,7 @@
 								Posso doar qualquer tipo de material?
 							</h3>
 							<p>
-								A lista de materiais que podem ser reciclados é enorme, porém a Ecopatas aceita somente tampas plásticas e lacres de lata de alumínio.  Para as atividades de triagem com os voluntários aceitamos doações de luvas,  máscaras descatáveis, tesoura, fitas adesivas e sacos de ração vazios (ráfia).
+								A Ecopatas aceita apenas doação de tampas plásticas e lacres de lata de alumínio para venda e reciclagem. Aceitamos também doação de luvas descartáveis,  tesouras,  fitas adesivas,  sacos grandes de plástico resistente (pode ser de ração vazio) ou sacos de ráfia (entulho).
 							</p> 
 							<div class="div-button" >
 								<button type="button" class="btn-green" text-align="center">
@@ -158,9 +158,9 @@
 								<script src="https://public.flourish.studio/resources/embed.js"></script>
 							</div>
 			
-							<p>
+							<!-- <p>
 								O resultado do nosso trabalho vai além dos números de castrações realizadas, trabalhamos para que cada animalzinho castrado pelo nosso projeto possa ter uma vida melhor e mais saudável.
-							</p> 
+							</p>  -->
 
 							<div class="div-button">
 								<button  type="button" class="btn-green">
