--- a/src/points.html
+++ b/src/points.html
@@ -54,8 +54,11 @@
                 <div  id="section-1">
                     <h2>Lista com Pontos de arrecadação:</h2>
 
-                    <p>Descubra os pontos de arrecadação mais perto da sua residência, temos pontos em várias regiões do estado de São Paulo.</p>
-                    <h5>Atenção: Grandes quantidades devem ser entregues diretamente na Ecopatas!</h4>
+                    <p>Temos pontos de coleta em várias regiões de São Paulo.</p>
+
+                    <p>Localize os pontos mais próximos da sua residência, trabalho ou trajeto.</p>
+
+                    <h5>Atenção: Grandes quantidades devem ser entregues diretamente na Ecopatas!</h5>
                     <!-- <ul data-js="points" class="points"></ul> -->
                 </div>
 
@@ -66,8 +69,12 @@
                     <h2>Quero ser um ponto de arrecadação</h2>
 
                     <p>
-                        Adoramos que queira nos ajudar a castrar cada vez mais animais carentes.
-                        É importante você saber que não realizamos coleta nos pontos de arrecadação.
+                        Quanto mais parceiros, melhor! Quanto mais pontos parceiros tivermos, mais
+                        pessoas poderão doar suas tampinhas. É importante saber que não retiramos as
+                        doações nos pontos. Precisamos da disponibilidade do responsável do ponto de
+                        levar a arrecadação até a nossa sede. Observação importante: pontos oficiais
+                        cadastrados não devem entregar sua arrecadação em outros pontos - o combinado
+                        é entregar diretamente pra nós.
                     </p>
 
                     <div id="div-button">
