--- a/src/volunteer.html
+++ b/src/volunteer.html
@@ -57,19 +57,20 @@
 							</div>
 			
 							<div class="col-md-12">
-								<img alt="Nossos voluntários" src="assets\imgs\voluntarios.png">
+								<img alt="Nossos voluntários" src="assets\imgs\SejaNossoVoluntário.png">
 							</div>
 			
 							<div class="col-md-12">
 								<p class="text-left">
-									Já fizemos muito trabalho, mas sempre precisamos de mais voluntários para que possamos impactar ainda mais a qualidade da vida dos nossos amados animaizinhos e do nosso meio ambiente.
-									Ser voluntário vai além de triar materiais na sede da ONG, é ajudar na qualidade de vida de animais de rua e carentes a terem uma vida digna e com menos sofrimento.
+									Ser voluntário vai muito além de triar tampinhas na sede da ONG. É ajudar a mudar
+									a história de vida de animais de rua e carentes. É diminuir o sofrimento e o abandono e dar
+									melhores condições de terem uma vida digna e com menos sofrimento.
 								</p>
 							</div>
 			
 							<div class="col-md-12">
 								<p class="text-left">
-								<b> Na Ecopatas temos duas formas de volutariado:</b> você pode oferecer seu endereço (casa, condomínio ou loja) como ponto de arrecadação ou se juntar a nós aos sábados para triar o material arrecadado na sede da Ecopatas. Você está pronto para fazer a diferença?
+								<b> Na Ecopatas temos duas formas de volutariado:</b> você pode oferecer seu endereço (comércio, condomínio  ou casa) como ponto de arrecadação ou juntar-se a nós na sede, aos sábados, para triar o material arrecadado. Vamos juntos fazer a diferença?
 								</p>
 							</div>
 			
@@ -84,9 +85,10 @@
 								<p>
 									Seu endereço (casa, condomínio ou loja) pode se tornar um ponto de arrecadação do tipo <b>aberto ao público</b> ou do tipo <b>privado</b>. <br/>
 									<br/>
-									<b>Aberto ao público:</b> Aparece na lista de pontos de arrecadação e aceita doações de qualquer pessoa. <br/>
+									<b>Aberto ao público:</b>  Aparece na lista de pontos de arrecadação e aceita doações de qualquer pessoa, do público externo.
+									Neste caso, enfatizamos, o material deve ser entregue diretamente na nossa sede. <br/>
 									<br/>
-									<b>Privado:</b> Não aparece na lista de pontos de arrecadação e aceita doações somente de pessoas de um mesmo espaço, como por exemplo, alunos da instituição de ensino, empregados do ponto comercial, etc.
+									<b>Privado:</b>  Não aparece na lista de pontos de arrecadação e recebe doações somente de pessoas de um mesmo espaço, como por exemplo, alunos da instituição de ensino, empregados da empresa ou do ponto comercial, etc.
 								</p>
 								<div class="div-button">
 									
@@ -104,7 +106,7 @@
 								
 								<h6>Triagem do material arrecadado na sede da Ecopatas</h6>
 								<p>
-									Você pode nos ajudar na triagem e separação do material recebido dos pontos de arrecadação. Os encontros para realizar triagem do material acontecem aos sábados. <b>É necessário que você leia e aceite os termos.</b>
+									Você pode também nos ajudar na triagem e separação do material recebido dos pontos de arrecadação. Os encontros para realizar triagem do material acontecem aos sábados <b>É necessário que você leia e aceite os termos.</b>
 								</p>
 								<div id="checkbox">
 									<input type="checkbox" id="terms" name="terms" onchange="enable()">
