Função dados animados

--- a/src/index.html
+++ b/src/index.html
@@ -118,33 +118,25 @@
 							</h3>
 	
 							<div id="dados-flourish">
-								<div class="dados">
+								<div class="dados" >
 									<i class="small material-icons">pets</i>
-									<div id="all" class="flourish-embed" data-src="visualisation/7849583">
-										<script src="https://public.flourish.studio/resources/embed.js"></script>
-									</div>
+									<div id="all-animals">2916</div>
 									<p>animais castrados</p>
 									
 								</div>
-								<div class="dados">
+								<div class="dados" >
 									<i class="small material-icons">pets</i>
-									<div id="dogs" class="flourish-embed" data-src="visualisation/7853128">
-										<script src="https://public.flourish.studio/resources/embed.js"></script>
-									</div>
+									<div id="dogs">1301</div>
 									<p>cachorros</p>
 								</div>
 								<div class="dados">
 									<i class="small material-icons">pets</i>
-									<div id="cats" class="flourish-embed" data-src="visualisation/7853147">
-										<script src="https://public.flourish.studio/resources/embed.js"></script>
-									</div>
+									<div id="cats">1611</div>
 									<p>gatos</p>
 								</div>
-								<div class="dados" id="outros-animais">
+								<div class="dados" >
 									<i class="small material-icons">pets</i>
-									<div id="other" class="flourish-embed" data-src="visualisation/7852936">
-										<script src="https://public.flourish.studio/resources/embed.js"></script>
-									</div>
+									<div id="other-animals">4</div>
 									<p>outros animais, entre eles<br/>
 										porquinho da índia e coelho</p>
 								</div>
@@ -329,5 +321,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+	<script src="js/index.js"></script>
   </body>
 </html>
